fix radio overflow

--- a/src/components/Radio.scss
+++ b/src/components/Radio.scss
@@ -5,12 +5,13 @@
         margin-top: auto;
     }
     & > .faust-ui-component-radio-group {
-        flex: 0 0 auto;
+        flex: 0 1 auto;
         margin-bottom: auto;
         border-width: 1px;
         border-radius: 4px;
         padding: 2px 4px;
         width: calc(100% - 8px);
+        overflow: auto;
         & > div {
             text-overflow: ellipsis;
             white-space: nowrap;
